# sudoku

./: .gitignore  LICENSE  README.md  Setup.hs  sudoku.cabal
misc/: test.sh
src/: Test.hs
src/Sudoku/: Config.hs  Init.hs  Plane.hs  Problem.hs  Solution.hs
src/UnitTest/: Solution.hs  Sudoku.hs
src/UnitTest/Sudoku/: Plane.hs  Problem.hs  Solution.hs
